--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 arbitrary = { version = "1", features = ["derive"], optional = true }
 bitflags = "1.3.2"
 
+[features]
+arbitrary = ["dep:arbitrary"]
+
 [dev-dependencies]
 criterion = "0.3.5"
 
@@ -20,3 +23,6 @@ path = "src/lib.rs"
 name = "sample"
 harness = false
 
+[profile.dev]
+debug = true
+opt-level = 2
